# m5atom-auto-keyboard

./: Cargo.toml  README.md  sdkconfig.defaults  tusb_bindings.h
.cargo/: config.toml
src/: callbacks.rs  descriptor.rs  keycode.rs  lib.rs  main.rs  usb.rs
src/usb/: descriptor.rs  keycode.rs  storage.rs
