[package]
name = "m5atom-bluetooth-keyboard"
version = "0.1.0"
authors = ["aiotter <git@aiotter.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.48", default-features = false }
usbd-hid = "0.7.0"
ssmarshal = { version = "1.0.0", features = ["std"] }
# binary_serde = { version = "1.0.24", features = ["std"] }
bytes = "1.6.0"
anyhow = "1.0.86"
# smallvec = "1.13.2"
# lazy_static = "1.4.0"

[build-dependencies]
embuild = "0.31.3"
# embuild1 = { package = "embuild", git = "https://github.com/esp-rs/embuild.git", features = ["espidf"] }

# [patch.crates-io]
# https://github.com/esp-rs/esp-idf-sys/pull/202
# esp-idf-sys = { git = "https://github.com/gopakumarce/esp-idf-sys.git", branch = "gopa-inline_fns" }  # v0.33.0
# esp-idf-sys = { git = "https://github.com/aiotter/esp-idf-sys.git", branch = "gopa-inline_fns" }  # v0.34.1
# embuild = { git = "https://github.com/gopakumarce/embuild.git", branch = "gopa-inline_fns" }
# bindgen = { git = "https://github.com/rust-lang/rust-bindgen.git", tag = "v0.63.0", features = ["experimental"] }

# cf. https://github.com/StefanJo3107/SanUSB

# [[package.metadata.esp-idf-sys.extra_components]]
# remote_component = { name = "espressif/tinyusb", version = "^0.15.0~8" }
# bindings_header = "tusb_bindings.h"
# bindings_module = "tinyusb"

[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "espressif/esp_tinyusb", version = "^1.4.4" }
bindings_header = "tusb_bindings.h"
bindings_module = "tinyusb"
