[package]
name = "m5atom-auto-keyboard"
version = "0.1.0"
authors = ["aiotter <git@aiotter.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"
default-run = "m5atom-auto-keyboard"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.51", default-features = false, features = ["experimental"] }
usbd-hid = "0.7.0"
ssmarshal = { version = "1.0.0", features = ["std"] }
bytes = "1.6.0"
anyhow = "1.0.86"
ws2812-esp32-rmt-driver = { version = "0.12.0", features = ["smart-leds-trait"] }
once_cell = "1.19.0"
smart-leds-trait = "0.3"

[build-dependencies]
embuild = "0.33.0"

[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "espressif/esp_tinyusb", version = "^1.4.4" }
bindings_header = "tusb_bindings.h"
bindings_module = "tinyusb"
